5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4138/executions/1800_2572.log
== TEST (2019-06-11 11:46:09) 
-- CODE:
v = array(eval(input("")))

npar = 0

for i in range(size(v)):
	if(v[i]%2==0):
		npar = npar + 1

n = zeros(npar,dtype=int)
i = 0
for i in range(size(v)):
	if(v[i]%!=0):
		n[i] = v[i]
		i = i + 1
		
print(n)
-- ERROR:
File "XXXX", line 12
    if(v[i]%!=0):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:46:21) 
-- CODE:
v = array(eval(input("")))

npar = 0

for i in range(size(v)):
	if(v[i]%2==0):
		npar = npar + 1

n = zeros(npar,dtype=int)
i = 0
for i in range(size(v)):
	if(v[i] %! =0):
		n[i] = v[i]
		i = i + 1
		
print(n)
-- ERROR:
File "XXXX", line 12
    if(v[i] %! =0):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:48:17) 
-- CODE:
v = array(eval(input("")))

nimpar = 0

for i in range(size(v)):
	if(v[i]%2 !=0):
		nimpar = nimpar + 1

n = zeros(nimpar,dtype=int)
i = 0
for i in range(size(v)):
	if(v[i] %! =0):
		n[i] = i
		i = i + 1
		
print(n)
-- ERROR:
File "XXXX", line 12
    if(v[i] %! =0):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:48:31) 
-- CODE:
v = array(eval(input("")))

nimpar = 0

for i in range(size(v)):
	if(v[i]%2 !=0):
		nimpar = nimpar + 1

n = zeros(nimpar,dtype=int)
i = 0
for i in range(size(v)):
	if(v[i] %2 !=0):
		n[i] = i
		i = i + 1
		
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    v = array(eval(input("")))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:48:46) 
-- CODE:
from numpy import *
v = array(eval(input("")))

nimpar = 0

for i in range(size(v)):
	if(v[i]%2 !=0):
		nimpar = nimpar + 1

n = zeros(nimpar,dtype=int)
i = 0
for i in range(size(v)):
	if(v[i] %2 !=0):
		n[i] = i
		i = i + 1
		
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:48:52) 
-- CODE:
from numpy import *
v = array(eval(input("")))

nimpar = 0

for i in range(size(v)):
	if(v[i]%2 !=0):
		nimpar = nimpar + 1

n = zeros(nimpar,dtype=int)
i = 0
for i in range(size(v)):
	if(v[i] %2 !=0):
		n[i] = i
		i = i + 1
		
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:48:55) 
-- CODE:
from numpy import *
v = array(eval(input("")))

nimpar = 0

for i in range(size(v)):
	if(v[i]%2 !=0):
		nimpar = nimpar + 1

n = zeros(nimpar,dtype=int)
i = 0
for i in range(size(v)):
	if(v[i] %2 !=0):
		n[i] = i
		i = i + 1
		
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:48:57) 
-- CODE:
from numpy import *
v = array(eval(input("")))

nimpar = 0

for i in range(size(v)):
	if(v[i]%2 !=0):
		nimpar = nimpar + 1

n = zeros(nimpar,dtype=int)
i = 0
for i in range(size(v)):
	if(v[i] %2 !=0):
		n[i] = i
		i = i + 1
		
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:49:00) 
-- CODE:
from numpy import *
v = array(eval(input("")))

nimpar = 0

for i in range(size(v)):
	if(v[i]%2 !=0):
		nimpar = nimpar + 1

n = zeros(nimpar,dtype=int)
i = 0
for i in range(size(v)):
	if(v[i] %2 !=0):
		n[i] = i
		i = i + 1
		
print(n)
-- EXECUTION TIME:
1.09573
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2572/main.py", line 14, in <module>
    n[i] = i
IndexError: index 3 is out of bounds for axis 0 with size 2

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:50:35) 
-- CODE:
from numpy import *
v = array(eval(input("")))

nimpar = 0

for i in range(size(v)):
	if(v[i]%2 !=0):
		nimpar = nimpar + 1

n = zeros(nimpar,dtype=int)
i = 0
for i in range(size(v)):
	if(v[i] %2 !=0):
		n[i] = v[i]
		i = i + 1
		
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:50:41) 
-- CODE:
from numpy import *
v = array(eval(input("")))

nimpar = 0

for i in range(size(v)):
	if(v[i]%2 !=0):
		nimpar = nimpar + 1

n = zeros(nimpar,dtype=int)
i = 0
for i in range(size(v)):
	if(v[i] %2 !=0):
		n[i] = v[i]
		i = i + 1
		
print(n)
-- EXECUTION TIME:
1.05189
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2572/main.py", line 14, in <module>
    n[i] = v[i]
IndexError: index 3 is out of bounds for axis 0 with size 2

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:53:42) 
-- CODE:
from numpy import *
v = array(eval(input("")))

nimpar = 0

for i in range(size(v)):
	if(v[i]%2 !=0):
		nimpar = nimpar + 1

n = zeros(nimpar,dtype=int)
i = 0
for i in range(size(v)):
	if(v[i] %2 !=0):
		n[i] = i
		i = i + 1
		
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:53:50) 
-- CODE:
from numpy import *
v = array(eval(input("")))

nimpar = 0

for i in range(size(v)):
	if(v[i]%2 !=0):
		nimpar = nimpar + 1

n = zeros(nimpar,dtype=int)
i = 0
for i in range(size(v)):
	if(v[i] %2 !=0):
		n[i] = i
		i = i + 1
		
print(n)
-- EXECUTION TIME:
0.810608
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2572/main.py", line 14, in <module>
    n[i] = i
IndexError: index 3 is out of bounds for axis 0 with size 2

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:56:49) 
-- CODE:
from numpy import *
v = array(eval(input("")))

nimpar = 0

for i in range(size(v)):
	if(v[i]%2 !=0):
		nimpar = nimpar + 1

n = zeros(nimpar,dtype=int)
i = 0
j = 0
for i in range(size(v)):
	if(v[i] %2 !=0):
		v[i] = n[j]
		i = i + 1
	j = j + 1
		
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:56:55) 
-- CODE:
from numpy import *
v = array(eval(input("")))

nimpar = 0

for i in range(size(v)):
	if(v[i]%2 !=0):
		nimpar = nimpar + 1

n = zeros(nimpar,dtype=int)
i = 0
j = 0
for i in range(size(v)):
	if(v[i] %2 !=0):
		v[i] = n[j]
		i = i + 1
	j = j + 1
		
print(n)
-- EXECUTION TIME:
0.972001
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2572/main.py", line 15, in <module>
    v[i] = n[j]
IndexError: index 3 is out of bounds for axis 0 with size 2

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:57:13) 
-- CODE:
from numpy import *
v = array(eval(input("")))

nimpar = 0

for i in range(size(v)):
	if(v[i]%2 !=0):
		nimpar = nimpar + 1

n = zeros(nimpar,dtype=int)
i = 0
j = 0
for i in range(size(v)):
	if(v[i] %2 !=0):
		n[j] = n[i]
		i = i + 1
	j = j + 1
		
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:57:20) 
-- CODE:
from numpy import *
v = array(eval(input("")))

nimpar = 0

for i in range(size(v)):
	if(v[i]%2 !=0):
		nimpar = nimpar + 1

n = zeros(nimpar,dtype=int)
i = 0
j = 0
for i in range(size(v)):
	if(v[i] %2 !=0):
		n[j] = n[i]
		i = i + 1
	j = j + 1
		
print(n)
-- EXECUTION TIME:
1.08195
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2572/main.py", line 15, in <module>
    n[j] = n[i]
IndexError: index 3 is out of bounds for axis 0 with size 2

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 12:49:39) 
-- CODE:
from numpy import *
v = array(eval(input("")))

nimpar = 0

for i in range(size(v)):
	if(v[i]%2 !=0):
		nimpar = nimpar + 1

n = zeros(nimpar,dtype=int)
r = 0

for j in range(size(v)):
	if(v[j] %2 !=0):
		n[r] = v[j]
		r = r + 1
		
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 12:50:04) 
-- CODE:
from numpy import *
v = array(eval(input("")))

nimpar = 0

for i in range(size(v)):
	if(v[i]%2 !=0):
		nimpar = nimpar + 1

n = zeros(nimpar,dtype=int)
r = 0

for j in range(size(v)):
	if(v[j] %2 !=0):
		n[r] = v[j]
		r = r + 1
		
print(n)
-- EXECUTION TIME:
1.06883
-- TEST CASE 1:
---- input:
[75247561,76546316,75713658,97135671,70356874]
---- correct output:
[75247561 97135671]
---- user output:
[75247561 97135671]
-- TEST CASE 2:
---- input:
[13017594,57417542,85024758,12475981,75942785,91875987,29584192,85794217]
---- correct output:
[12475981 75942785 91875987 85794217]
---- user output:
[12475981 75942785 91875987 85794217]
-- TEST CASE 3:
---- input:
[31874903,74902746,23742046]
---- correct output:
[31874903]
---- user output:
[31874903]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
